# Neon

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
cmake/: cuda_patch.cmake  libigl.cmake  torch.cmake
datasets/: CMakeLists.txt
datasets/include/datasets/: Dataset.h  Deformation.h  Dynamic.h  Homogenization.h  HomogenizationDataset.h  SolverMask.h  Static.h
datasets/include/datasets/simulations/: linear_elastic_50by50_cube.h
datasets/src/: Deformation.cpp  Dynamic.cpp  Homogenization.cpp  HomogenizationDataset.cpp  SolverMask.cpp  Static.cpp
datasets/tests/: DeformationTest.cpp
meshing/: CMakeLists.txt
meshing/include/meshing/: DofOptimizer.h  ImplicitSurfaceGenerator.h  MarchingCubes.h  Mesh.h  MeshOptimizer.h  Normals.h
meshing/include/meshing/graphs/: AdjacencyList.h
meshing/include/meshing/implicit_surfaces/: APeriodicCuboid.cpp  APeriodicCuboid.h  ImplicitSurfaceGenerator.h  PeriodicCuboid.h  PeriodicGyroid.h
meshing/src/: APeriodicCuboid.cpp  AdjacencyList.cpp  DofOptimizer.cpp  ImplicitSurfaceGenerator.cpp  MarchingCubes.cpp  Mesh.cpp  MeshOptimizer.cpp  Normals.cpp  PeriodicCuboid.cpp  PeriodicGyroid.cpp
meshing/tests/: DofOptimizerTest.cpp  MeshOptimizerTest.cpp
py/: README.md  train.py  unet.py  unetdataset.py
scripts/: build.sh  configure.sh  configure_headless.sh  configure_nn.sh  format.sh  run.sh
solvers/: CMakeLists.txt
solvers/include/FEM/: LinearElastic.h
solvers/include/materials/: Homogenization.h
solvers/include/solvers/: LinearElastic.h
solvers/include/solvers/FEM/: LinearElastic.h
solvers/include/solvers/controllers/: SolverController.h
solvers/include/solvers/helpers/: BoundaryCondition.h
solvers/include/solvers/integrators/: CentralDifferenceMethod.h
solvers/include/solvers/materials/: Homogenization.h  Material.h  OrthotropicMaterial.h  Rve.h  ScalarField.h
solvers/include/solvers/utilities/: BoundaryCondition.h
solvers/src/: BoundaryCondition.cpp  CentralDifferenceMethod.cpp  Homogenization.cpp  LinearElastic.cpp  Material.cpp  OrthotropicMaterial.cpp  Rve.cpp  SolverController.cpp
solvers/tests/: CentralDifferenceMethodTest.cpp  HomogenizationTest.cpp  LinearElasticTest.cpp
src/: main.cpp
utilities/: CMakeLists.txt
utilities/include/math/: LinearAlgebra.h
utilities/include/runtime/: NeonAssert.h
utilities/include/utilities/algorithms/: Algorithms.h
utilities/include/utilities/filesystem/: CsvFile.h
utilities/include/utilities/math/: Geometry.h  LinearAlgebra.h  Numbers.h  Tensors.h  Time.h
utilities/include/utilities/runtime/: NeonAssert.h  NeonLog.h  Profiler.h
utilities/src/: LinearAlgebra.cpp  Numbers.cpp  Profiler.cpp  Time.cpp
utilities/tests/: AssertTest.cpp  LinearAlgebraTest.cpp
visualizer/: CMakeLists.txt
visualizer/include/visualizer/: Visualizer.h
visualizer/include/visualizer/controllers/: SolverController.h
visualizer/include/visualizer/pipelines/: BehaviorMatching.h  MatchUniformAndVoid.h  Pipeline.h
visualizer/src/: BehaviorMatching.cpp  MatchUniformAndVoid.cpp  SolverController.cpp  Visualizer.cpp  main.cpp
